[package]
name = "capture-server"
version = "0.1.0"
edition = "2021"

[dependencies]
capture = { path = "../capture" }
axum = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
envconfig = "0.10.0"
anyhow = { workspace = true, features = [] }
once_cell = "1.18.0"

[dev-dependencies]
assert-json-diff =  { workspace = true }
futures = "0.3.29"
rand = { workspace = true }
rdkafka = { workspace = true }
reqwest = "0.11.22"
serde_json = { workspace = true }
